--- a/software.html
+++ b/software.html
@@ -39,20 +39,48 @@
   
     <div class="container">
 <!--Begin body here --> 
-<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qmr9VfwB&k=Job&j=ocrkbfwS&__jvst=Tenable+Employee&__jvsd=szNYEhwK&__jvsc=Twitter&bid=n9I9oMwF'>Tenable Careers - Senior Software Engineer - Scrum Master (Python)</a></h5> 
+<h5><a href='http://jobs.jobvite.com/kaleidoscope/job/osnqbfwa'>Kaleidoscope Careers - Software Developer</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-10-29</p>
+<hr/>
+<h5><a href='https://jobs.smartrecruiters.com/Visa/743999698446395-sr-software-engineer'>Visa Sr. Software Engineer | SmartRecruiters</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-10-29</p>
+<hr/>
+<h5><a href='https://jobs.smartrecruiters.com/Visa/743999698445452-staff-software-engineer'>Visa Staff Software Engineer | SmartRecruiters</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-10-29</p>
+<hr/>
+<h5><a href='https://jobs.smartrecruiters.com/Visa/743999698446388-senior-software-engineer'>Visa Senior Software Engineer | SmartRecruiters</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-10-29</p>
+<hr/>
+<h5><a href='https://jobs.smartrecruiters.com/Leidos1/743999698444733-intern-software-developer'>Leidos Intern Software Developer | SmartRecruiters</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-10-29</p>
+<hr/>
+<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qB09Vfwp&k=Job&j=oF6sbfw8&__jvst=Employee+Referral&__jvsd=sHAdDgwS&__jvsc=Twitter&bid=n8kaoMwh'>NICE inContact Careers - Specialist Software Engineer Java &amp; AWS</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
+<h5><a href='https://jobs.lever.co/kariusdx/831fede0-f883-4d6f-b548-e8412ec96fec'>Karius - Senior Software Engineer</a></h5> 
+<p><span class="badge badge-light">Redwood City, CA</span></p>
+<p>Posted on: 2019-10-29</p>
+<hr/>
+<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qmr9VfwB&k=Job&j=ocrkbfwS&__jvst=Tenable+Employee&__jvsd=szNYEhwK&__jvsc=Twitter&bid=n9I9oMwF'>Tenable Careers - Senior Software Engineer - Scrum Master (Python)</a></h5> 
+<p><span class="badge badge-light">Columbia, Maryland  Baltimore, Maryland</span></p>
+<p>Posted on:: 2019-10-29</p>
+<hr/>
 <h5><a href='https://brainlab.softgarden.io/job/3459839/Software-Engineer?jobDbPVId=14354587&amp;l=en'>Software Engineer</a></h5> 
-<p><span class="badge badge-light"></span></p>
+<p><span class="badge badge-light">Munich</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
 <h5><a href='https://brainlab.softgarden.io/job/5015097/Software-Engineer-Tracking-Infrastructure?jobDbPVId=14376762&amp;l=en'>Software Engineer - Tracking Infrastructure</a></h5> 
-<p><span class="badge badge-light"></span></p>
+<p><span class="badge badge-light">Munich</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
 <h5><a href='https://brainlab.softgarden.io/job/4108774/Senior-Software-Developer-Medical-3D-Visualization?jobDbPVId=14353457&amp;l=en'>Senior Software Developer - Medical 3D Visualization</a></h5> 
-<p><span class="badge badge-light"></span></p>
+<p><span class="badge badge-light">Munich</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
 <h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qs49Vfwk&k=Job&j=oYsyafwS&__jvst=Employee+Referral&__jvsd=sbDU6fwy&__jvsc=Twitter&bid=ned9oMwf'>Cirrus Logic Careers - Software Developer</a></h5> 
@@ -75,7 +103,7 @@
 <p><span class="badge badge-light">Vancouver, BC</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/KMSTechnology1/743999698440924-fresher-software-engineer'>KMS Technology FRESHER SOFTWARE ENGINEER | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/KMSTechnology1/743999698440924-fresher-software-engineer'>KMS Technology FRESHER SOFTWARE ENGINEER | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Vietnam</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -91,7 +119,7 @@
 <p><span class="badge badge-light">St. Louis, Missouri</span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
-<h5><a href='http://hayessoft.applytojob.com/apply/G6iQKwBzbe/Software-Engineer'>Software Engineer - Hayes Software Systems - Career Page</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://hayessoft.applytojob.com/apply/G6iQKwBzbe/Software-Engineer'>Software Engineer - Hayes Software Systems - Career Page</a></h5> 
 <p><span class="badge badge-light">Austin</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -125,7 +153,7 @@
 <p><span class="badge badge-light">Arlington, VA Arlington</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/aeratechnology/cfcc4de9-c90a-42d7-8a8e-ac38de6dc00d'>Aera Technology - Software Engineer in Test (Automation)</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/aeratechnology/cfcc4de9-c90a-42d7-8a8e-ac38de6dc00d'>Aera Technology - Software Engineer in Test (Automation)</a></h5> 
 <p><span class="badge badge-light">Pune, India</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -203,11 +231,11 @@
 <p><span class="badge badge-light">Boston, Massachusetts  Austin, Texas</span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/glidewelldental/job/orUpbfwF'>Glidewell Dental Careers - Software Engineer II</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/glidewelldental/job/orUpbfwF'>Glidewell Dental Careers - Software Engineer II</a></h5> 
 <p><span class="badge badge-light">Irvine, California</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/impinj/job/ojeobfwQ'>Impinj Careers - Senior Software Engineer, ItemEncode</a></h5> 
+<h5><a href='https://jobs.jobvite.com/impinj/job/ojeobfwQ'>Impinj Careers - Senior Software Engineer, ItemEncode</a></h5> 
 <p><span class="badge badge-light">Seattle, Washington</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -231,7 +259,7 @@
 <p><span class="badge badge-light">Sofia, Bulgaria</span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
-<h5><a href='https://benefits-data-trust.breezy.hr/p/730e9c476ac5-senior-software-engineer-interactions'>Senior Software Engineer - Interactions at Benefits Data Trust</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://benefits-data-trust.breezy.hr/p/730e9c476ac5-senior-software-engineer-interactions'>Senior Software Engineer - Interactions at Benefits Data Trust</a></h5> 
 <p><span class="badge badge-light">Philadelphia, PA</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -251,7 +279,7 @@
 <p><span class="badge badge-light">Denver, CO</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/AroghiaGroup/743999698433249-sr-server-software-engineer-for-global-sportswear-brand'>Aroghia Group Sr. Server Software Engineer for Global Sportswear Brand | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/AroghiaGroup/743999698433249-sr-server-software-engineer-for-global-sportswear-brand'>Aroghia Group Sr. Server Software Engineer for Global Sportswear Brand | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Beaverton, OR, USA</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -305,11 +333,11 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/appian/jobs/1937981'>Job Application for Senior Software Engineer - Performance at Appian Corporation </a></h5> 
+<h5><a href='https://boards.greenhouse.io/appian/jobs/1937981'>Job Application for Senior Software Engineer - Performance at Appian Corporation </a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/newrelic/job/ocZ6afwb'>New Relic Careers - Lead Software Engineer</a></h5> 
+<h5><a href='http://jobs.jobvite.com/newrelic/job/ocZ6afwb'>New Relic Careers - Lead Software Engineer</a></h5> 
 <p><span class="badge badge-light">Barcelona, Spain</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -337,7 +365,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<h5><a href='https://idana.join.com/jobs/464256-fullstack-software-engineer-typescript-m-f-d'>Job @ Tomes (Remote): Fullstack Software Engineer ... | JOIN</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://idana.join.com/jobs/464256-fullstack-software-engineer-typescript-m-f-d'>Job @ Tomes (Remote): Fullstack Software Engineer ... | JOIN</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -353,11 +381,11 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qHO9Vfwj&k=Job&j=o0jy9fwK&__jvst=Employee&__jvsd=sTRQZgwk&__jvsc=Twitter&bid=nqbKnMwZ'>Schneider Electric NAM Careers - Software Engineer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qHO9Vfwj&k=Job&j=o0jy9fwK&__jvst=Employee&__jvsd=sTRQZgwk&__jvsc=Twitter&bid=nqbKnMwZ'>Schneider Electric NAM Careers - Software Engineer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/ovt/job/ozipbfwb'>Omnivision Technologies, Inc Careers - Applications Software Engineer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/ovt/job/ozipbfwb'>Omnivision Technologies, Inc Careers - Applications Software Engineer</a></h5> 
 <p><span class="badge badge-light">Santa Clara, California</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -377,7 +405,7 @@
 <p><span class="badge badge-light">Canada  Montreal</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qtA9VfwR&k=Job&j=oY5P8fwK&__jvst=Employee&__jvsd=sOfTShwA&__jvsc=Twitter&bid=n8tInMwX'>Gigamon Careers - Senior Software Engineer ? Mobility</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qtA9VfwR&k=Job&j=oY5P8fwK&__jvst=Employee&__jvsd=sOfTShwA&__jvsc=Twitter&bid=n8tInMwX'>Gigamon Careers - Senior Software Engineer ? Mobility</a></h5> 
 <p><span class="badge badge-light">Santa Clara, CASanta Clara, California</span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
@@ -409,40 +437,12 @@
 <p><span class="badge badge-light">Toronto, Canada</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/ayla-networks/job/ooRlbfwv'>Ayla Networks Careers - Senior Embedded Software Engineer</a></h5> 
+<h5><a href='https://jobs.jobvite.com/ayla-networks/job/ooRlbfwv'>Ayla Networks Careers - Senior Embedded Software Engineer</a></h5> 
 <p><span class="badge badge-light">Bangalore, India</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
 <h5><a href='https://jobs.jobvite.com/ayla-networks/job/oyRlbfwF'>Ayla Networks Careers - Embedded Software Engineer</a></h5> 
 <p><span class="badge badge-light">Bangalore, India</span></p>
-<p>Posted on: 2019-10-29</p>
-<hr/>
-<h5><a href='http://optelgroup.applytojob.com/apply/uTqcKdkTE8/Senior-Software-Engineer'>Senior Software Engineer - Optel Group - Career Page</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>Posted on: 2019-10-29</p>
-<hr/>
-<h5><a href='https://jobs.smartrecruiters.com/Netatmo/743999698407941-ios-software-engineer'>Netatmo iOS Software Engineer | SmartRecruiters</a></h5> 
-<p><span class="badge badge-light">Paris, France</span></p>
-<p>Posted on: 2019-10-29</p>
-<hr/>
-<h5><a href='https://jobs.smartrecruiters.com/LaunchCode/743999698409676-junior-software-developer'>LaunchCode Junior Software Developer | SmartRecruiters</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>Posted on: 2019-10-29</p>
-<hr/>
-<h5><a href='https://jobs.smartrecruiters.com/LaunchCode/743999698409772-junior-software-developer'>LaunchCode Junior Software Developer | SmartRecruiters</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>Posted on: 2019-10-29</p>
-<hr/>
-<h5><a href='https://jobs.smartrecruiters.com/LaunchCode/743999698409708-entry-level-software-engineer'>LaunchCode Entry Level Software Engineer | SmartRecruiters</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>Posted on: 2019-10-29</p>
-<hr/>
-<h5><a href='https://jobs.smartrecruiters.com/LaunchCode/743999698409807-entry-level-software-engineer'>LaunchCode Entry Level Software Engineer | SmartRecruiters</a></h5> 
-<p><span class="badge badge-light">Tampa, FL</span></p>
-<p>Posted on: 2019-10-29</p>
-<hr/>
-<h5><a href='https://jobs.smartrecruiters.com/LaunchCode/743999698409644-entry-level-software-developer'>LaunchCode Entry Level Software Developer | SmartRecruiters</a></h5> 
-<p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
 
